fixing a z-index of backdrop

--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -94,6 +94,7 @@ header{
     left: 0;
     width: 100vw;
     height: 100vh;
+    z-index: 999999;
 
     background-color: var(--modal-bg-color);
 
